--- a/Automation Game/Automation Game.csproj
+++ b/Automation Game/Automation Game.csproj
@@ -81,6 +81,7 @@
     <Compile Include="IMoveable.cs" />
     <Compile Include="Moveable.cs" />
     <Compile Include="MovementPacket.cs" />
+    <Compile Include="OnTouchEvent.cs" />
     <Compile Include="PaintInfo.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
@@ -88,6 +89,7 @@
     <Compile Include="StartUpMenu.cs" />
     <Compile Include="Structure.cs" />
     <Compile Include="Terrain.cs" />
+    <Compile Include="Tool.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
