--- a/Automation Game/Automation Game.csproj
+++ b/Automation Game/Automation Game.csproj
@@ -85,6 +85,7 @@
     <Compile Include="PathFinding\Tile.cs" />
     <Compile Include="Plant.cs" />
     <Compile Include="Point.cs" />
+    <Compile Include="StorageChest.cs" />
     <Compile Include="StructureType.cs" />
     <Compile Include="OnTouchEvent.cs" />
     <Compile Include="PaintInfo.cs" />
@@ -163,9 +164,6 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\inventory_slot_border.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\drawable\acorn.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
