added interface for useable structure. switched storage management from GameActivity to StorageChest. fixed bug where items would drop on structures. fixed bug where blueprints were unwalkable

--- a/Automation Game/Automation Game.csproj
+++ b/Automation Game/Automation Game.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Item.cs" />
     <Compile Include="ItemType.cs" />
     <Compile Include="IUpdateable.cs" />
+    <Compile Include="IUseable.cs" />
     <Compile Include="MainMenu.cs" />
     <Compile Include="MapDraw.cs" />
     <Compile Include="map\FastNoiseLite.cs" />
