added music service

--- a/Automation Game/Automation Game.csproj
+++ b/Automation Game/Automation Game.csproj
@@ -84,6 +84,8 @@
     <Compile Include="IMoveable.cs" />
     <Compile Include="Moveable.cs" />
     <Compile Include="MovementPacket.cs" />
+    <Compile Include="MusicBroadcastReciver.cs" />
+    <Compile Include="MusicService.cs" />
     <Compile Include="PathFinding\AStar.cs" />
     <Compile Include="PathFinding\Tile.cs" />
     <Compile Include="Plant.cs" />
@@ -193,6 +195,12 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\turn_right.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\raw\Minecraft Music - Menu 1.mp3" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\raw\Terraria Soundtrack - 01 - Overworld Day.mp3" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
